--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -16,6 +16,8 @@
             <p class="card-text">{{post.texto}}</p>
             <p class="card-text">
                 <small class="text-muted">{{post.autor}}</small>
+            </p>
+            <p class="card-text">
                 <small class="text-muted">{{post.fecha}}</small>
             </p>
             <p class="card-text">{{post.categoria}}</p>
