--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>My Blog</h1>
+<h1>Nuestro Blog de Música</h1>
 <ul class="menu">
   <li [routerLink]="['blog']" routerLinkActive="activa">Blog</li>
   <li [routerLink]="['new']" routerLinkActive="activa">Fomulario</li>
