--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<h1>Nuestro Blog de Música</h1>
-<ul class="menu">
-  <li [routerLink]="['blog']" routerLinkActive="activa">Blog</li>
-  <li [routerLink]="['new']" routerLinkActive="activa">Fomulario</li>
+<div class="caja">
+  <h1>Nuestro Blog de Música</h1>
+  <ul class="menu">
+    <li [routerLink]="['blog']" routerLinkActive="activa">Blog</li>
+    <li [routerLink]="['new']" routerLinkActive="activa">Fomulario</li>
 
-</ul>
-
-
-<router-outlet></router-outlet>
+  </ul>
+  <router-outlet></router-outlet>
+</div>
