--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -30,7 +30,8 @@ h3{
 .post{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;    
+    justify-content: center;   
+     
 
 }
 
@@ -38,6 +39,7 @@ h3{
     margin: 10px;
     padding: 10px; 
     background-color: #ecf0f1;
+    box-sizing: content-box;
 }
 
 .post img{
